fixed spacing and alignment of media icons

--- a/static/src/stylesheets/module/facia-garnett/_pillars.scss
+++ b/static/src/stylesheets/module/facia-garnett/_pillars.scss
@@ -156,6 +156,7 @@ $pillars: (
         .inline-camera {
             svg {
                 fill: map-get($palette, invertedKicker);
+                border: 1px solid map-get($palette, invertedKicker);
             }
 
             &::after {
